<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dimen_140"
    android:layout_height="@dimen/dimen_100"
    >
    <ImageView
        android:id="@+id/iv_layout_counter_minus"
        android:layout_width="@dimen/widget_size_little"
        android:layout_height="@dimen/widget_size_little"
        android:layout_marginStart="@dimen/dimen_20"
        android:contentDescription="@string/minus"
        android:src="@drawable/ic_iconmonstr_minus_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_layout_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/plus"
        android:textSize="@dimen/text_size_sub_logo"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/iv_layout_counter_plus"
        android:layout_width="@dimen/widget_size_little"
        android:layout_height="@dimen/widget_size_little"
        android:layout_marginEnd="@dimen/dimen_20"
        android:contentDescription="@string/default_description"
        android:src="@drawable/ic_iconmonstr_plus_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>