<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shereats.view.fragment.UserInfoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_user_info" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shereats.view.fragment.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shereats.view.fragment.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dishFragment"
        android:name="com.example.shereats.view.fragment.DishFragment"
        android:label="dish_fragment"
        tools:layout="@layout/dish_fragment" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.shereats.view.fragment.CartFragment"
        android:label="cart_fragment"
        tools:layout="@layout/cart_fragment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.shereats.view.fragment.HomeFragment"
        android:label="home_fragment"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.shereats.view.fragment.OrderFragment"
        android:label="order_fragment"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/friendFragment"
        android:name="com.example.shereats.view.fragment.FriendFragment"
        android:label="friend_fragment"
        tools:layout="@layout/fragment_friend" />

</navigation>