<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_200"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/iv_main_header_bk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/colorPrimary"
        />

    <com.grindewald1900.shereats.view.custom.RoundImageView
        android:id="@+id/iv_main_header_portrait"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_30"
        android:contentDescription="@string/nav_header_desc"
        app:image_border_src="@drawable/img_user_unknown"
        app:border_width="@dimen/dimen_2"
        app:image_border_color="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_main_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="@dimen/dimen_5"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_header_email"
        app:layout_constraintLeft_toLeftOf="@+id/tv_main_header_email"
        />

    <TextView
        android:id="@+id/tv_main_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:text="@string/nav_header_subtitle"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/iv_main_header_portrait"
        app:layout_constraintLeft_toRightOf="@+id/iv_main_header_portrait"
        />
</androidx.constraintlayout.widget.ConstraintLayout>