<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_5">
        <LinearLayout
            android:id="@+id/ll_fragment_dish_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <com.grindewald1900.shereats.view.custom.SearchFilterLayout
                android:id="@+id/sf_fragment_dish_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                app:search_filter_text="@string/price" />
            <com.grindewald1900.shereats.view.custom.SearchFilterLayout
                android:id="@+id/sf_fragment_dish_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                app:search_filter_text="@string/rate"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_fragment_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/promotion"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large_title"
                android:textColor="@color/colorPrimary"
                android:thumb="@drawable/selector_switch_thumb"
                app:track ="@drawable/selector_switch_track"
                />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_fragment_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/ll_fragment_dish_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fragment_dish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
