<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_3">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_login_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            />
        <com.example.shereats.view.custom.RoundImageView
            android:id="@+id/iv_login_portrait"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="@dimen/dimen_80"
            android:layout_marginTop="@dimen/dimen_60"
            app:image_border_src="@drawable/img_user_unknown"
            app:image_border_color="@color/colorPrimary"
            app:border_width="@dimen/dimen_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="@dimen/dimen_280"
            android:layout_height="@dimen/dimen_40"
            android:drawableLeft="@drawable/ic_fa5_user_2"
            android:drawablePadding="@dimen/dimen_5"
            android:background="@drawable/shape_round_corner_20"
            android:hint="@string/name"
            android:textSize="@dimen/text_size_title"
            android:layout_marginTop="@dimen/dimen_40"
            android:padding="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_portrait"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="@dimen/dimen_280"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_20"
            android:hint="@string/password"
            android:textSize="@dimen/text_size_title"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_md_vpn_key"
            android:drawablePadding="@dimen/dimen_5"
            android:background="@drawable/shape_round_corner_20"
            android:padding="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/et_login_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/tv_login_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/dimen_10"
            app:layout_constraintTop_toBottomOf="@+id/et_login_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <com.example.shereats.view.custom.TransitionButton
            android:id="@+id/btn_login_login"
            android:layout_width="@dimen/button_width_middle"
            android:layout_height="@dimen/button_length_middle"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            app:loaderColor="@color/white"
            app:defaultColor="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_hint" />

        <View
            android:id="@+id/view_login_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_bk_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_activity_login_1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_forget"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tv_login_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with"
            android:textColor="@color/gray_3"
            android:textSize="@dimen/text_size_title"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:layout_constraintTop_toTopOf="@+id/iv_login_with_hint"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_with_hint"

            />
        <ImageView
            android:id="@+id/iv_login_with_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_md_help_outline"
            android:layout_marginBottom="@dimen/dimen_40"
            app:layout_constraintRight_toRightOf="@id/iv_login_with_twitter"
            app:layout_constraintBottom_toTopOf="@+id/iv_login_with_twitter"
            />
        <ImageView
            android:id="@+id/iv_login_with_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fa5_twitter"
            android:layout_marginBottom="@dimen/dimen_80"
            android:layout_marginEnd="@dimen/dimen_30"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/iv_login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fa5_google"
            android:layout_marginEnd="@dimen/dimen_30"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_with_twitter"
            app:layout_constraintTop_toTopOf="@+id/iv_login_with_twitter"
            />
        <ImageView
            android:id="@+id/iv_login_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fa5_facebook"
            android:layout_marginEnd="@dimen/dimen_30"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_with_google"
            app:layout_constraintTop_toTopOf="@+id/iv_login_with_twitter"
            />
        <ImageView
            android:id="@+id/iv_login_with_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_antfill_wechat"
            android:layout_marginEnd="@dimen/dimen_30"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_with_facebook"
            app:layout_constraintTop_toTopOf="@+id/iv_login_with_twitter"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
